--- a/styles/common/forms.module.css
+++ b/styles/common/forms.module.css
@@ -15,6 +15,19 @@
     }
 }
 
+
+.select select {
+	border: 1px solid #eb3535;
+	box-sizing: border-box;
+	border-radius: 100px;
+	padding: 10px 15px;
+	height: 37px;
+	width: 100%;
+	margin-bottom: 15px;
+	font-size: 14px;
+	color: #808080;
+}
+
 .titleInnerForm {
     font-weight: 600;
     font-size: 18px;
