--- a/styles/contacts/section-contacts.module.css
+++ b/styles/contacts/section-contacts.module.css
@@ -1,3 +1,23 @@
+/* .transferContainer {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
+.transferContainer .content {
+	width: calc(100% - 430px);
+}
+
+.transferBox {
+	width: 400px;
+	position: sticky;
+	top: 30px;
+} */
+
+.transferBox {
+	margin-top: 50px;
+}
+
 .titleInner {
     position: relative;
     font-weight: 600;
